--- a/index.html
+++ b/index.html
@@ -1,48 +1,34 @@
+<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume</title>
+    <title>Jaswanth_portfolio</title>
 </head>
 <body>
-    <h1>Jaswanth Vishnumolakala</h1>
-    <b>2902 3rd PL</b><br>
-    <b>Lubbock</b><br>
-    <b>Texas</h3></b><br>
-    <b>Contact: (806)-772-7263</b><br>
-    <h2>Profile</h2>
-    <p>Creative web-developer dedicated to developing dynamic and user-friendly websites. Provide Technical knowledge and expertise, build new websites successfully.</p>
-    <h2>Education</h2>
-    01/2022 - 12/2023<br>
-    Lubbock, United States<br>
-    <b>Computer and Information Sciences Msc<br>Texas Tech University</b>
-    06/2016 - 06/2020<br>
-    Guntur, India<br>
-    <b>Computer Science and Engineering Bachelor of Tech<br>Vignan's deemed to be University</b><br>
-    Graduated First Class
-    <h2>Work Experience</h2>
-    08/2020 - 08/2021<br>
-    <b>Intern Web Developer<br>Sill Infotech</b>
-    <ul>
-        <li>Developed websites for local restaurants to give the customers utmost satisfaction by user friendly websites</li>
-        <li>Assisted to develop and launch websites</li>
-    </ul>
-    <h2>Skills</h2>
-    <h3>Languages</h3>
-    <ul>
-        <li>English</li>
-        <li>Telugu</li>
-    </ul>
-    <h3>Computer Skills</h3>
-    <ul>
-        <li>Microsoft Office</li>
-        <li>HTML,MySQL</li>
-        <li>CSS</li>
-        <li>React</li>
-        <li>Node.JS</li>
-        <li>Java Script, Java</li>
-    </ul>
-
+    <h1>Jaswanth Vishnumolakala's Portfolio</h1>
+    <h2>I'm a web developer</h2>
+    <hr>
+    <h3><a href="./public/movie-ranking.html"><b>Movie Ranking Project</b></a></h3>
+    <img src="./assets/images/Screenshot 2023-09-19 195404.png" height="200"><br><br>
+    <h3><a href="./public/birthday-invite.html"><b>Birthday Invite Project</b></a></h3>
+    <img src="./assets/images/Screenshot 2023-09-19 195455.png" height="200">
+    <hr>
+    <a href="./public/about.html">about me</a>   
+    <a href="./public/contact.html">Contact Me</a>
 </body>
 </html>
+<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+
+<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+
+<!-- TODO 4: Add titles/subtitles etc. -->
+
+<!-- TODO 5: Add a link to the project pages -->
+
+<!-- TODO 6: Add images to show the project previews
+HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
+https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
+
+<!-- TODO 7: Add the Contact Me and About Me page links -->
