--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <hr>
     <a href="./public/about.html">about me</a>   
     <a href="./public/contact.html">Contact Me</a>
+    <a href="./resume.html">Resume</a>
 </body>
 </html>
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
