--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <h1 style="color:#e5eaf5">Jaswanth Vishnumolakala's Portfolio</h1>
+    <h1 style="color:#8458B3">Jaswanth Vishnumolakala's Portfolio</h1>
     <h2>I'm a web developer</h2>
     <hr>
     <h3><a href="./public/movie-ranking.html"><b>Movie Ranking Project</b></a></h3>
