--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
+
+    <div id="first">
     <h1 style="color:#8458B3">Jaswanth Vishnumolakala's Portfolio</h1>
     <h2>I'm a web developer</h2>
+    </div>
     <hr>
     <h3><a href="./public/movie-ranking.html"><b>Movie Ranking Project</b></a></h3>
     <img src="./assets/images/Screenshot 2023-09-19 195404.png" height="200"><br><br>
