--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaswanth_portfolio</title>
     <link rel="stylesheet" href="./style.css" />
+    <style>
+        div{
+            background:#5F9EA0;
+        }
+    </style>
 </head>
 <body>
 
